home page added

--- a/Space station/logIn.html
+++ b/Space station/logIn.html
@@ -14,9 +14,9 @@
         <div class="container">
             <h1>LogIn to Connect me</h1>
             <h3>Explore the space world with me</h3>
-            <input type="text" name="name" id="name" placeholder="Enter Your Name">
-            <input type="email" name="email" id="email" placeholder="Enter Your Email">
-            <a href="#index.html"><input type="button" value="Log In"></a>
+            <input type="text" name="name" id="name" placeholder="Enter Your Name" required>
+            <input type="email" name="email" id="email" placeholder="Enter Your Email" required>
+            <a href="index.html" target="_blank"><input type="button" value="Log In" required></a>
         </div>
     </section>
 </body>
