--- a/Coffee shop/index.html
+++ b/Coffee shop/index.html
@@ -26,6 +26,7 @@
                         <li><a href="#menu">Menu</a></li>
                         <li><a href="#product">Product</a></li>
                         <li><a href="#contact">Contact</a></li>
+                        <div class="slider"></div>
                     </ul>
                 </header>
                 <div class="right-img">
