--- a/Coffee shop/index.html
+++ b/Coffee shop/index.html
@@ -35,9 +35,9 @@
             </div>
         </div>
         <div class="floating-container">
-            <div><img src="Images/coffee beans.jpg" alt="" width="160px" height="160px"></div>
-            <div><img src="Images/coffee powder.jpg" alt="" width="160px" height="160px"></div>
-            <div><img src="Images/leaves.jpg" alt="" width="160px" height="160px"></div>
+            <div><img src="Images/coffee beans.jpg" alt="" ></div>
+            <div><img src="Images/coffee powder.jpg" alt="" ></div>
+            <div><img src="Images/leaves.jpg" alt=""></div>
         </div>
     </div>
 </body>
